@@ -2122,8 +2122,10 @@ static int stbtt__run_charstring(const stbtt_fontinfo *info, int glyph_index, st
 				if (info->fdselect.size)
 					subrs = stbtt__cid_get_glyph_subrs(info, glyph_index);
 				has_subrs = 1;
-			}
-			// fallthrough
+			};
+			// Specially formated comments to notify compilers:
+			//-fallthrough
+			/* fall through */
 		case 0x1D: // callgsubr
 			if (sp < 1) return STBTT__CSERR("call(g|)subr stack");
 			v = (int)s[--sp];
